--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!--? Style -->
     <link rel="stylesheet" href="assets/style.css">
+    <!-- ? Favicon -->
+    <link rel="shortcut icon" href="s3-alpha-sig.figma.com/img/77be/4974/66243624295027cac6fc6e15e8a53ef6?Expires=1698624000&Signature=OJqIWCBpV8rbCXkHJyPlGmLCz1gAVGo7TpGHfiVLLU-PE-dwKGerODIyNAHITpYyCAvzmGKwVQ7RlaDQ2udG3DAahhWl3TdnXTlr23upgyo6dNWGz7hny~lkSleYG8rcnlmaps37Op58WeXTRp3oUKHmeWbt6IisXZsTPG8G6yN5E3LbXTgKzP75uYHN00U3cNI3XDkHgx1oFo4JyRTewHJmWHBBtV1sh4VLrD953zs5~oorGxoC9f3RspcFmEo9~~GzYP7NoGWXL-SqbZUPQfo0~iIw13ZqJQFiWXIvDnKF40pYupkM8YsfylfH80LM-7TizGguMA~B-6wfbpoT1A__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4" type="image/x-icon">
     <title>Ibnu Abbas | Malang</title>
 </head>
 
@@ -26,7 +28,7 @@
             <div class="nav">
                 <a href="#">
                     <div class="nav-logo">
-                        <img src="assets/img/logo.png" alt="">
+                        <img src="https://s3-alpha-sig.figma.com/img/77be/4974/66243624295027cac6fc6e15e8a53ef6?Expires=1698624000&Signature=OJqIWCBpV8rbCXkHJyPlGmLCz1gAVGo7TpGHfiVLLU-PE-dwKGerODIyNAHITpYyCAvzmGKwVQ7RlaDQ2udG3DAahhWl3TdnXTlr23upgyo6dNWGz7hny~lkSleYG8rcnlmaps37Op58WeXTRp3oUKHmeWbt6IisXZsTPG8G6yN5E3LbXTgKzP75uYHN00U3cNI3XDkHgx1oFo4JyRTewHJmWHBBtV1sh4VLrD953zs5~oorGxoC9f3RspcFmEo9~~GzYP7NoGWXL-SqbZUPQfo0~iIw13ZqJQFiWXIvDnKF40pYupkM8YsfylfH80LM-7TizGguMA~B-6wfbpoT1A__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4" alt="">
                         <p>Ibnu Abbas</p>
                     </div>
                 </a>
@@ -99,9 +101,10 @@
     <section class="about" id="about">
         <div class="container">
             <div class="center-title">
+                <hr style="border: 2.5px var(--blue) solid; max-width: 100px; min-width: 70px;">
                 <h1>TENTANG <span
                         style="background-color: var(--blue);color: var(--gray); padding: 0px 6px;">KAMI</span></h1>
-                <hr>
+
             </div>
             <div class="des">
                 <img src="https://s3-alpha-sig.figma.com/img/e080/cbb4/7ea53606e66cd0b5e0cfccc2c79d35e1?Expires=1698624000&Signature=MoUTxfjTdIiD-4hir~ItufZFS6QEscD0D1jvE4BiT4PWCKksaDyR2xyERt1RpBNlig2Ha9PwxmDjS5Vzs7HEqMzqgPmQN1RNExeNSGpCqmGLynNm2DcyGeVYAaCFppMjp80tm1iGxLx4ipEmXC9Bw9W37~DgtPevioFqLHJoZ1Zc-Kh2aRTvbIB09pUWw-UaDqbbmMipZGySIH6Ua7J3ESWRBTjNd6pC5iKAjz9zX9b-G-raFRGUJ4vrz58oUcPtsEVBbgn6lHV28wOk0wf-czf-HWk37LpHNNTNNw9lntxW4wcFjJH48t72ESNtCJrMZ3Fs1nFEGlyG19QAeSe9mw__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4"
@@ -122,8 +125,8 @@
     <section class="program" id="program">
         <div class="container">
             <div class="center-title" style="padding-top: 60px;">
+                <hr style="border: 2.5px var(--dark) solid; max-width: 100px; min-width: 70px;">
                 <h1 style="color: var(--gray);">PROGRAM</h1>
-                <hr style="border: 3px var(--dark) solid; min-width: 180px; max-width:200px ;">
             </div>
             <div class="program-grid">
                 <div class="program-item">
@@ -212,8 +215,8 @@
     <section class="contact" id="contact">
         <div class="container">
             <div class="center-title" style="padding-top: 60px;">
+                <hr style="border: 2px var(--blue) solid; min-width: 100px; max-width:140px ;">
                 <h1 style="color: var(--gray);">CONTACT</h1>
-                <hr style="border: 3px var(--blue) solid; min-width: 180px; max-width:200px ;">
             </div>
             <div class="contact-grid">
                 <form action="https://formsubmit.co/izzulaverroes@gmail.com" method="POST" class="contact-form">
@@ -233,10 +236,10 @@
     <!-- FOOTER -->
     <footer>
         <div class="container">
-            <hr>
+            <hr style="width: 100%; border: var(--gray) 1px solid; border-radius: 10px; margin: auto; opacity: .5;">
             <div class="footer-grid-top">
                 <div>
-                    <img src="assets/img/logo.png" alt="">
+                    <img src="https://s3-alpha-sig.figma.com/img/77be/4974/66243624295027cac6fc6e15e8a53ef6?Expires=1698624000&Signature=OJqIWCBpV8rbCXkHJyPlGmLCz1gAVGo7TpGHfiVLLU-PE-dwKGerODIyNAHITpYyCAvzmGKwVQ7RlaDQ2udG3DAahhWl3TdnXTlr23upgyo6dNWGz7hny~lkSleYG8rcnlmaps37Op58WeXTRp3oUKHmeWbt6IisXZsTPG8G6yN5E3LbXTgKzP75uYHN00U3cNI3XDkHgx1oFo4JyRTewHJmWHBBtV1sh4VLrD953zs5~oorGxoC9f3RspcFmEo9~~GzYP7NoGWXL-SqbZUPQfo0~iIw13ZqJQFiWXIvDnKF40pYupkM8YsfylfH80LM-7TizGguMA~B-6wfbpoT1A__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4" alt="">
                     <div>
                         <h1>Ibnu Abbas</h1>
                         <p>Merupakan salah satu sekolah menengah yang berada di Malang, provinsi Jawa Timur. Adapun
@@ -265,7 +268,9 @@
                         <li><a href="/">PPDB</a></li>
                     </ul>
                 </div>
-            </div>
+            </div><br><br><br>
+            <hr style="width: 700px; border: var(--gray) 1px solid; border-radius: 10px; margin: auto; opacity: .5;">
+            <p style="color: var(--gray); text-align: center; padding: 5px;">Designed By Muhammad Ken Izzulhaq</p>
         </div>
     </footer>
     <!-- FOOTER END-->
