--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                     </ul>
                 </div>
             </div><br><br><br>
-            <hr style="width: 700px; border: var(--gray) 1px solid; border-radius: 10px; margin: auto; opacity: .5;">
+            <hr style="width: 80%; border: var(--gray) 1px solid; border-radius: 10px; margin: auto; opacity: .5;">
             <p style="color: var(--gray); text-align: center; padding: 5px;">Designed By Muhammad Ken Izzulhaq</p>
         </div>
     </footer>
