--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
-    <!--? Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!--? Font Awesome PRO MAX-->
+    <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.4.2/css/all.css">
+    <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.4.2/css/sharp-solid.css">
+    <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.4.2/css/sharp-regular.css">
+    <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.4.2/css/sharp-light.css">
     <!--? Style -->
     <link rel="stylesheet" href="assets/style.css">
     <!-- ? Favicon -->
@@ -62,7 +63,7 @@
         <div class="container">
             <div class="title">
                 <h1>&emsp;GAK MONDOK <br>&emsp;&emsp;&emsp; GAK <span
-                        style="background-color: var(--blue);color: var(--gray); padding: 0px 20px;">KEREN</span></h1>
+                        style="background-color: var(--blue);color: var(--gray); padding: 0px 20px;">KEREN</span> </h1>
             </div>
             <div class="cta">
                 <div class="cta-item">
@@ -151,6 +152,61 @@
     </section>
     <!-- USTADZ END-->
     <!-- PROGRAM -->
+    <section class="mapel">
+        <div class="container">
+            <!-- Slider main container -->
+            <div class="swiper mySwiper2">
+                <div class="swiper-wrapper">
+                    <!-- DIINIYYAH -->
+                    <div class="swiper-slide" style="text-align: center;">
+                        <div>
+                            <i class="fa-duotone fa-users fa-6x"
+                                style="--fa-primary-color: #146c94; --fa-secondary-color: #146c94;"></i>
+                        </div>
+                        <div class="mapel-des">
+                            <h2 class="num" style="margin: 20px 0 0 0;color: var(--blue);opacity: .6; font-size: xx-large;" data-val="210">000</h2>
+                            <h1 style="color: var(--dark);opacity: .9;">Total <br>Santri</h1>
+                        </div>
+                    </div>
+                    <!-- DINIYYAH END -->
+                    <!-- UMUM -->
+                    <div class="swiper-slide"  style="text-align: center;">
+                        <div>
+                            <i class="fa-duotone fa-person-praying fa-6x"
+                                style="--fa-primary-color: #146c94; --fa-primary-opacity: 1; --fa-secondary-color: #146c94; --fa-secondary-opacity: .7;"></i>
+                        </div>
+                        <div class="mapel-des">
+                            <h2 class="num" style="margin: 20px 0 0 0;color: var(--blue);opacity: .6; font-size: xx-large;" data-val="38">000</h2>
+                            <h1 style="color: var(--dark);opacity: .9;">Santri <br>Aktif</h1>
+                        </div>
+                    </div>
+                    <!-- UMUM END -->
+                    <!-- DIGITAL -->
+                    <div class="swiper-slide"  style="text-align: center;">
+                        <div>
+                            <i class="fa-duotone fa-user-graduate fa-6x"
+                                style="--fa-primary-color: #146c94; --fa-secondary-color: #146c94;"></i>
+                        </div>
+                        <div class="mapel-des">
+                            <h2 class="num" style="margin: 20px 0 0 0;color: var(--blue);opacity: .6; font-size: xx-large;" data-val="180">000</h2>
+                            <h1 style="color: var(--dark);opacity: .9;">Alumni <br>Santri</h1>
+                        </div>
+                    </div>
+                    <!-- DIGITAL END-->
+                    <!-- SPORT -->
+                    <div class="swiper-slide" style="text-align: center;">
+                        <div>
+                            <i class="fa-duotone fa-clock fa-6x"
+                                style="--fa-primary-color: #146c94; --fa-secondary-color: #146c94;"></i>
+                                <div class="mapel-des">
+                                    <h2 class="num" style="margin: 20px 0 0 0;color: var(--blue);opacity: .6; font-size: xx-large;" data-val="12">000</h2>
+                                    <h1 style="color: var(--dark); opacity: .9;">Tahun<br>Mengajar</h1>
+                                </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+    </section>
     <section class="program" id="program">
         <div class="container">
             <div class="center-title" style="padding-top: 60px;">
@@ -328,10 +384,15 @@
                     <!-- ESPORT -->
                     <div class="swiper-slide">
                         <div>
-                            <svg xmlns="http://www.w3.org/2000/svg" width="107" height="107" viewBox="0 0 107 107" fill="none">
-                                <path d="M98.5405 3H8.45946C7.01152 3 5.62289 3.57519 4.59904 4.59904C3.57519 5.62289 3 7.01152 3 8.45946V98.5405C3 99.9885 3.57519 101.377 4.59904 102.401C5.62289 103.425 7.01152 104 8.45946 104H98.5405C99.9885 104 101.377 103.425 102.401 102.401C103.425 101.377 104 99.9885 104 98.5405V8.45946C104 7.01152 103.425 5.62289 102.401 4.59904C101.377 3.57519 99.9885 3 98.5405 3Z" stroke="#19A7CE" stroke-width="6" stroke-linecap="round" stroke-linejoin="round"/>
-                                <path d="M34.3919 72.5672V34.3919M34.3919 34.3919L53.5 53.5L72.6081 34.4492V72.6081L102.389 102.389M34.3919 34.3919L4.61873 4.61873M104 36.9988L70.0012 3M36.9988 104L3 70.0012" stroke="#19A7CE" stroke-width="6" stroke-linecap="round" stroke-linejoin="round"/>
-                              </svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="107" height="107" viewBox="0 0 107 107"
+                                fill="none">
+                                <path
+                                    d="M98.5405 3H8.45946C7.01152 3 5.62289 3.57519 4.59904 4.59904C3.57519 5.62289 3 7.01152 3 8.45946V98.5405C3 99.9885 3.57519 101.377 4.59904 102.401C5.62289 103.425 7.01152 104 8.45946 104H98.5405C99.9885 104 101.377 103.425 102.401 102.401C103.425 101.377 104 99.9885 104 98.5405V8.45946C104 7.01152 103.425 5.62289 102.401 4.59904C101.377 3.57519 99.9885 3 98.5405 3Z"
+                                    stroke="#19A7CE" stroke-width="6" stroke-linecap="round" stroke-linejoin="round" />
+                                <path
+                                    d="M34.3919 72.5672V34.3919M34.3919 34.3919L53.5 53.5L72.6081 34.4492V72.6081L102.389 102.389M34.3919 34.3919L4.61873 4.61873M104 36.9988L70.0012 3M36.9988 104L3 70.0012"
+                                    stroke="#19A7CE" stroke-width="6" stroke-linecap="round" stroke-linejoin="round" />
+                            </svg>
                         </div>
                         <div class="mapel-des">
                             <h1>MLBB E-Sport</h1>
@@ -343,7 +404,8 @@
                     <!-- ESPORT END -->
                     <div class="swiper-slide">
                         <div>
-                            <img src="https://s3-alpha-sig.figma.com/img/595b/7b37/bbaeada44004ecd80a72247e59ea28e9?Expires=1698624000&Signature=MbqlwlS41t8XCs5TnyasS1sGYezwz~xuYQve0mDAsb4smncxa9yCShv8Ih3omTuY~B3dAHgBJ3X6v953w0h35O8oonIan-3J~wemrUVH9UA4A~sxj9A8lvmkLFnIULqZY-8vPJrGL4h2MMwdK8w~nwh~mIWp10o9EDibt4qD6M7QkbXhKNzmXTm8rYb4~fIftPMS1K5FCV68~GUcX-YAdD-07H9LCEtXp1jVvwDvMQhc~uwZAAOurXfJgzeJHdNW~DKU9ys6-vj-XHD2PdxjoUjLjT2avhZI8Y35sgBf1DyLV1fAcPE9~CMWpQwTU3s4KLE51COOF4a8RppEneLPiw__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4" width="170" height="100">
+                            <img src="https://s3-alpha-sig.figma.com/img/595b/7b37/bbaeada44004ecd80a72247e59ea28e9?Expires=1698624000&Signature=MbqlwlS41t8XCs5TnyasS1sGYezwz~xuYQve0mDAsb4smncxa9yCShv8Ih3omTuY~B3dAHgBJ3X6v953w0h35O8oonIan-3J~wemrUVH9UA4A~sxj9A8lvmkLFnIULqZY-8vPJrGL4h2MMwdK8w~nwh~mIWp10o9EDibt4qD6M7QkbXhKNzmXTm8rYb4~fIftPMS1K5FCV68~GUcX-YAdD-07H9LCEtXp1jVvwDvMQhc~uwZAAOurXfJgzeJHdNW~DKU9ys6-vj-XHD2PdxjoUjLjT2avhZI8Y35sgBf1DyLV1fAcPE9~CMWpQwTU3s4KLE51COOF4a8RppEneLPiw__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4"
+                                width="170" height="100">
                         </div>
                         <div class="mapel-des">
                             <h1>PUBG E-Sport</h1>
@@ -448,6 +510,32 @@
                 },
                 1120: {
                     slidesPerView: 3,
+                    spaceBetween: 50,
+                },
+            },
+        });
+        var swiper2 = new Swiper(".mySwiper2", {
+            slidesPerView: 1,
+            spaceBetween: 10,
+            pagination: {
+                el: ".swiper-pagination",
+                clickable: true,
+            },
+            autoplay: {
+                delay: 3500,
+                disableOnInteraction: false,
+            },
+            breakpoints: {
+                640: {
+                    slidesPerView: 2,
+                    spaceBetween: 20,
+                },
+                1100: {
+                    slidesPerView: 3,
+                    spaceBetween: 40,
+                },
+                1120: {
+                    slidesPerView: 4,
                     spaceBetween: 50,
                 },
             },
