--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
     </section>
     <!-- USTADZ END-->
     <!-- PROGRAM -->
-    <section class="mapel" data-aos="slide-left" data-aos-delay="1000" data-aos-duration="500" data-aos-once="true">
+    <section class="mapel" data-aos="slide-right" data-aos-delay="1000" data-aos-duration="500" data-aos-once="true">
         <div class="container">
             <!-- Slider main container -->
             <div class="swiper mySwiper2">
