--- a/index.html
+++ b/index.html
@@ -28,24 +28,25 @@
     <title>Ibnu Abbas | Malang</title>
 </head>
 
-<body data-bs-theme="light">
+<body>
     <!-- NAVBAR -->
     <header>
         <div class="container">
             <div class="nav transparant">
                 <a href="#">
                     <div class="nav-logo">
-                        <img src="https://s3-alpha-sig.figma.com/img/77be/4974/66243624295027cac6fc6e15e8a53ef6?Expires=1698624000&Signature=OJqIWCBpV8rbCXkHJyPlGmLCz1gAVGo7TpGHfiVLLU-PE-dwKGerODIyNAHITpYyCAvzmGKwVQ7RlaDQ2udG3DAahhWl3TdnXTlr23upgyo6dNWGz7hny~lkSleYG8rcnlmaps37Op58WeXTRp3oUKHmeWbt6IisXZsTPG8G6yN5E3LbXTgKzP75uYHN00U3cNI3XDkHgx1oFo4JyRTewHJmWHBBtV1sh4VLrD953zs5~oorGxoC9f3RspcFmEo9~~GzYP7NoGWXL-SqbZUPQfo0~iIw13ZqJQFiWXIvDnKF40pYupkM8YsfylfH80LM-7TizGguMA~B-6wfbpoT1A__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4" alt="">
+                        <img src="https://s3-alpha-sig.figma.com/img/77be/4974/66243624295027cac6fc6e15e8a53ef6?Expires=1698624000&Signature=OJqIWCBpV8rbCXkHJyPlGmLCz1gAVGo7TpGHfiVLLU-PE-dwKGerODIyNAHITpYyCAvzmGKwVQ7RlaDQ2udG3DAahhWl3TdnXTlr23upgyo6dNWGz7hny~lkSleYG8rcnlmaps37Op58WeXTRp3oUKHmeWbt6IisXZsTPG8G6yN5E3LbXTgKzP75uYHN00U3cNI3XDkHgx1oFo4JyRTewHJmWHBBtV1sh4VLrD953zs5~oorGxoC9f3RspcFmEo9~~GzYP7NoGWXL-SqbZUPQfo0~iIw13ZqJQFiWXIvDnKF40pYupkM8YsfylfH80LM-7TizGguMA~B-6wfbpoT1A__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4"
+                            alt="">
                         <p>Ibnu Abbas</p>
                     </div>
                 </a>
                 <nav data-bs-burger-body>
                     <ul>
-                        <li><a href="#">Beranda</a></li>
-                        <li><a href="#about">Tentang Kami</a></li>
-                        <li><a href="#program">Program</a></li>
-                        <li><a href="#contact">Hubungi Kami</a></li>
-                        <li><a href="/">PPDB</a></li>
+                        <li><a href="#beranda" data-target="beranda">Beranda</a></li>
+                        <li><a href="#about" data-target="about">Tentang Kami</a></li>
+                        <li><a href="#program" data-target="program">Program</a></li>
+                        <li><a href="#contact" data-target="contact">Hubungi Kami</a></li>
+                        <li><a href="">PPDB</a></li>
                         <li>
                             <div color-theme-toggle class="dark-button"><span title="Dark mode toggle"></span></div>
                         </li>
@@ -62,7 +63,7 @@
     </header>
     <!-- NAVBAR END -->
     <!-- HOME -->
-    <section class="home" id="home">
+    <div class="home">
         <div class="img"></div>
         <div class="container" data-aos="fade-up" data-aos-delay="500" data-aos-duration="500" data-aos-once="true">
             <div class="title">
@@ -105,7 +106,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </div>
     <!-- HOME END -->
     <!-- BERANDA -->
     <section class="beranda" id="beranda">
@@ -146,14 +147,15 @@
                         style="--fa-primary-color: var(--darkBlue); --fa-secondary-color:var(--darkBlue);"></i>
                     <div>
                         <h1 class="fa-5x">VISI</h1>
-                        <p>Mencetak generasi Qur'ani yang berakhlaqul karimah
+                        <p style="color: var(--darktext);">Mencetak generasi Qur'ani yang berakhlaqul karimah
                         </p>
                     </div>
                 </div>
                 <div data-aos="fade-left" data-aos-delay="1000" data-aos-duration="500" data-aos-once="true">
                     <div>
                         <h1 class="fa-5x">MISI</h1>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut odio, tenetur provident quos
+                        <p style="color: var(--darktext);"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut
+                            odio, tenetur provident quos
                             impedit sint magni ipsum cumque ipsam inventore consequatur ratione tempore ad reiciendis.
                         </p>
                     </div>
@@ -165,7 +167,7 @@
     </section>
     <!-- TENTANG KAMI END-->
     <!-- USTADZ -->
-    <section class="ustadz">
+    <div class="ustadz">
         <!-- <div class="ustd-bg"></div> -->
         <div class="ustd-box" data-aos="fade-right" data-aos-delay="1000" data-aos-once="true">
             <div class="ustd-title">
@@ -185,11 +187,11 @@
                 </div>
             </div>
         </div>
-    </section>
+    </div>
     <!-- USTADZ END-->
     <!-- PROGRAM -->
-    <section class="mapel" data-aos="slide-right" data-aos-delay="1000" data-aos-duration="500" data-aos-once="true">
-        <div class="container">
+    <div class="mapel" style="background-color: var(--gray);">
+        <div class="container" data-aos="fade-left" data-aos-delay="1000" data-aos-duration="500" data-aos-once="true">
             <!-- Slider main container -->
             <div class="swiper mySwiper2">
                 <div class="swiper-wrapper">
@@ -250,7 +252,8 @@
                     </div>
                 </div>
             </div>
-    </section>
+        </div>
+    </div>
     <section class="program" id="program">
         <div class="container">
             <div class="center-title" style="padding-top: 60px;">
@@ -341,11 +344,14 @@
     </section>
     <!-- PROGRAM END-->
     <!-- MAPEL -->
-    <section class="mapel">
+    <div class="mapel">
         <div class="container">
-            <h1 style="text-align: center; font-size: xx-large; margin: 0px 0 30px 0;"  data-aos="fade-right" data-aos-delay="1000" data-aos-duration="500" data-aos-once="true">Mata Pelajaran</h1>
+            <h1 style="text-align: center; font-size: xx-large; margin: 0px 0 30px 0; color: var(--darktext);"
+                data-aos="fade-right" data-aos-delay="1000" data-aos-duration="500" data-aos-once="true">Mata Pelajaran
+            </h1>
             <!-- Slider main container -->
-            <div class="swiper mySwiper"  data-aos="fade-left" data-aos-delay="1000" data-aos-duration="500" data-aos-once="true">
+            <div class="swiper mySwiper" data-aos="fade-left" data-aos-delay="1000" data-aos-duration="500"
+                data-aos-once="true">
                 <div class="swiper-wrapper">
                     <!-- DIINIYYAH -->
                     <div class="swiper-slide">
@@ -467,7 +473,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </div>
     <!-- MAPEL END-->
     <!-- CONTACT -->
     <section class="contact" id="contact">
