V7 Fixing lorem text

--- a/index.html
+++ b/index.html
@@ -72,8 +72,7 @@
             </div>
             <div class="cta">
                 <div class="cta-item">
-                    <i class="fa-regular fa-info-circle fa-7x"
-                    style="color: var(--blue);"></i><br><br>
+                    <i class="fa-regular fa-info-circle fa-7x" style="color: var(--blue);"></i><br><br>
                     <div class="desc">
                         <h1>TENTANG KAMI</h1>
                         <a href="#about">Lebih lanjut</a>
@@ -101,7 +100,7 @@
     <section class="beranda" id="beranda">
         <div class="container">
             <div class="center-title" data-aos="fade-right" data-aos-delay="500" data-aos-once="true">
-                <hr style="border: 2.5px var(--gray) solid; max-width: 100px; min-width: 70px;">
+                <hr style="border: 2.5px var(--gray) solid; max-width: 100px !important; min-width: 40px !important; width: 10vw;">
                 <h1 style="color: var(--blueGray);">Beranda</h1>
             </div>
             <div class="des" data-aos="fade-left" data-aos-delay="1000" data-aos-duration="500"
@@ -125,7 +124,7 @@
     <section class="about" id="about">
         <div class="container">
             <div class="center-title" data-aos="fade-left" data-aos-delay="500" data-aos-once="true">
-                <hr style="border: 2.5px var(--blue) solid; max-width: 100px; min-width: 70px;">
+                <hr style="border: 2.5px var(--blue) solid; max-width: 100px; min-width: 40px;">
                 <h1>TENTANG <span
                         style="background-color: var(--blue);color: var(--gray); padding: 0px 6px;">KAMI</span></h1>
 
@@ -136,16 +135,19 @@
                         style="--fa-primary-color: var(--darkBlue); --fa-secondary-color:var(--darkBlue);"></i>
                     <div>
                         <h1 class="fa-5x">VISI</h1>
-                        <p style="color: var(--darktext);">Mencetak generasi Qur'ani yang berakhlaqul karimah
+                        <p style="color: var(--darktext);">Menjadi lembaga pendidikan Islam yang bermanhaj Ahlussunnah
+                            wal Jama’ah dengan pemahaman Salafus sholih yang unggul dan amanah.
                         </p>
                     </div>
                 </div>
                 <div data-aos="fade-left" data-aos-delay="1000" data-aos-duration="500" data-aos-once="true">
                     <div>
                         <h1 class="fa-5x">MISI</h1>
-                        <p style="color: var(--darktext);"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut
-                            odio, tenetur provident quos
-                            impedit sint magni ipsum cumque ipsam inventore consequatur ratione tempore ad reiciendis.
+                        <p style="color: var(--darktext);">
+                            Menumbuhkan penghayatan dan pengamalan ajaran Agama Islam. <br>
+                            Meningkatkan kualitas ilmu, iman, ibadah, dan amal sholih yang sesuai dengan Al Qur’an dan
+                            As Sunnah yang shohihah yang berdasarkan pemahaman Salafus Sholih. <br>
+                            </ul>
                         </p>
                     </div>
                     <i class="fa-duotone fa-diagram-subtask fa-10x"
@@ -261,35 +263,35 @@
                 </div>
                 <div class="program-item" data-aos="fade-up" data-aos-delay="600" data-aos-once="true">
                     <i class="fa-duotone fa-book-sparkles fa-flip-horizontal fa-5x"
-                    style="--fa-primary-color: var(--darkBlue); --fa-secondary-color: var(--darkBlue)"></i><br><br>
+                        style="--fa-primary-color: var(--darkBlue); --fa-secondary-color: var(--darkBlue)"></i><br><br>
                     <h1>HADITS</h1>
                     <p>Kumpulan perkataan, perbuatan, dan persetujuan Nabi Muhammad SAW. Program ini membantu memahami
                         ajaran Islam yang bersumber dari Nabi Muhammad SAW.</p>
                 </div>
                 <div class="program-item" data-aos="fade-up" data-aos-delay="700" data-aos-once="true">
                     <i class="fa-duotone fa-books fa-5x"
-                    style="--fa-primary-color: var(--darkBlue); --fa-secondary-color: var(--darkBlue);--fa-primary-opacity: .4;--fa-secondary-opacity: 1"></i><br><br>
+                        style="--fa-primary-color: var(--darkBlue); --fa-secondary-color: var(--darkBlue);--fa-primary-opacity: .4;--fa-secondary-opacity: 1"></i><br><br>
                     <h1>FIQIH</h1>
                     <p>Hukum Islam yang berkaitan dengan perilaku manusia. Program ini membantu memahami hukum-hukum
                         Islam dan bagaimana menerapkannya dalam kehidupan sehari-hari.</p>
                 </div>
                 <div class="program-item" data-aos="fade-up" data-aos-delay="800" data-aos-once="true">
                     <i class="fa-duotone fa-podium fa-5x"
-                    style="--fa-primary-color: var(--darkBlue); --fa-secondary-color: var(--darkBlue); --fa-primary-opacity: .7;--fa-secondary-opacity: 1"></i><br><br>
+                        style="--fa-primary-color: var(--darkBlue); --fa-secondary-color: var(--darkBlue); --fa-primary-opacity: .7;--fa-secondary-opacity: 1"></i><br><br>
                     <h1>DAKWAH</h1>
                     <p>Upaya untuk menyebarkan ajaran Islam kepada orang lain. Program ini membantu memahami bagaimana
                         menyebarkan ajaran Islam dengan cara yang baik dan benar.</p>
                 </div>
                 <div class="program-item" data-aos="fade-up" data-aos-delay="900" data-aos-once="true">
                     <i class="fa-duotone fa-message-check fa-5x"
-                    style="--fa-primary-color: var(--darkBlue); --fa-secondary-color: var(--darkBlue);--fa-primary-opacity: .4;--fa-secondary-opacity: 1"></i><br><br>
+                        style="--fa-primary-color: var(--darkBlue); --fa-secondary-color: var(--darkBlue);--fa-primary-opacity: .4;--fa-secondary-opacity: 1"></i><br><br>
                     <h1>AKHLAQ</h1>
                     <p>Etika dan moralitas dalam kehidupan sehari-hari. Program ini membantu memahami bagaimana
                         berperilaku baik dan benar dalam kehidupan sehari-hari.</p>
                 </div>
                 <div class="program-item" data-aos="fade-up" data-aos-delay="1000" data-aos-once="true">
                     <i class="fa-duotone fa-star-and-crescent fa-5x"
-                    style="--fa-primary-color: var(--darkBlue); --fa-secondary-color: var(--darkBlue);"></i><br><br>
+                        style="--fa-primary-color: var(--darkBlue); --fa-secondary-color: var(--darkBlue);"></i><br><br>
                     <h1>TAUHID</h1>
                     <p>Keyakinan bahwa hanya ada satu Tuhan yang berkuasa atas segala sesuatu. Program ini membantu
                         memahami konsep tauhid dalam Islam.</p>
@@ -312,7 +314,7 @@
                     <div class="swiper-slide">
                         <div>
                             <i class="fa-duotone fa-feather fa-5x"
-                            style="--fa-primary-color: var(--darkBlue); --fa-secondary-color: var(--darkBlue); --fa-primary-opacity: .4;--fa-secondary-opacity: 1"></i><br><br>
+                                style="--fa-primary-color: var(--darkBlue); --fa-secondary-color: var(--darkBlue); --fa-primary-opacity: .4;--fa-secondary-opacity: 1"></i><br><br>
                         </div>
                         <div class="mapel-des">
                             <h1>Diniyyah</h1>
@@ -326,7 +328,7 @@
                     <div class="swiper-slide">
                         <div>
                             <i class="fa-duotone fa-messages fa-5x"
-                            style="--fa-primary-color: var(--darkBlue); --fa-secondary-color: var(--darkBlue); "></i><br><br>
+                                style="--fa-primary-color: var(--darkBlue); --fa-secondary-color: var(--darkBlue); "></i><br><br>
                         </div>
                         <div class="mapel-des">
                             <h1>Bahasa Arab</h1>
@@ -340,7 +342,7 @@
                     <div class="swiper-slide">
                         <div>
                             <i class="fa-duotone fa-language fa-5x"
-                            style="--fa-primary-color: var(--darkBlue); --fa-secondary-color: var(--darkBlue); --fa-primary-opacity: .4;--fa-secondary-opacity: 1"></i><br><br>
+                                style="--fa-primary-color: var(--darkBlue); --fa-secondary-color: var(--darkBlue); --fa-primary-opacity: .4;--fa-secondary-opacity: 1"></i><br><br>
                         </div>
                         <div class="mapel-des">
                             <h1>Bahasa Inggris</h1>
@@ -354,7 +356,7 @@
                     <div class="swiper-slide">
                         <div>
                             <i class="fa-duotone fa-calculator-simple fa-5x"
-                            style="--fa-primary-color: var(--darkBlue); --fa-secondary-color: var(--darkBlue); --fa-primary-opacity: .4;--fa-secondary-opacity: 1"></i><br><br>
+                                style="--fa-primary-color: var(--darkBlue); --fa-secondary-color: var(--darkBlue); --fa-primary-opacity: .4;--fa-secondary-opacity: 1"></i><br><br>
                         </div>
                         <div class="mapel-des">
                             <h1>Matematika</h1>
@@ -368,7 +370,7 @@
                     <div class="swiper-slide">
                         <div>
                             <i class="fa-duotone fa-atom fa-5x"
-                            style="--fa-primary-color: var(--darkBlue); --fa-secondary-color: var(--darkBlue); --fa-primary-opacity: .4;--fa-secondary-opacity: 1"></i><br><br>
+                                style="--fa-primary-color: var(--darkBlue); --fa-secondary-color: var(--darkBlue); --fa-primary-opacity: .4;--fa-secondary-opacity: 1"></i><br><br>
                         </div>
                         <div class="mapel-des">
                             <h1>Fisika</h1>
@@ -381,7 +383,7 @@
                     <div class="swiper-slide">
                         <div>
                             <i class="fa-duotone fa-book-blank fa-flip-horizontal fa-5x"
-                            style="--fa-primary-color: var(--darkBlue); --fa-secondary-color: var(--darkBlue);"></i><br><br>
+                                style="--fa-primary-color: var(--darkBlue); --fa-secondary-color: var(--darkBlue);"></i><br><br>
                         </div>
                         <div class="mapel-des">
                             <h1>Nahwu</h1>
@@ -399,7 +401,7 @@
     <section class="contact" id="contact">
         <div class="container">
             <div class="center-title" style="padding-top: 60px;">
-                <hr style="border: 2px var(--blue) solid; min-width: 100px; max-width:140px ;">
+            <hr style="border: 2px var(--blue) solid; min-width: 50px !important; max-width:140px !important;width: 7vw;">
                 <h1 style="color: var(--gray);">CONTACT</h1>
             </div>
             <div class="contact-grid">
